<resources>
    <string name="app_name">Banderas</string>
    <string name="opcion1">opcion</string>
    <string name="opcion2">opcion</string>
    <string name="opcion3">opcion</string>
    <string name="iv_bandera">Bandera</string>
    <string name="btn_comprobar">Comprobar</string>
    <string name="tv1">¿De qué país es la bandera?</string>
    <string name="tv_respuesta">respuesta</string>
    <string name="tv_respuesta1">respuesta</string>
    <string name="tv_respuesta2">respuesta</string>
    <string name="tv_index">indice</string>
    <string name="img_aleatoria">portada</string>
    <string name="txt_puntos">Puntos:</string>
    <string name="tv_puntos">0</string>
    <string name="tv_vidas">3</string>
</resources>